platform_versioned_docs/version-4.5.0/use-platform/apps/use-in-templates.mdx
---
title: Use In Templates
sidebar_label: Use In Templates
sidebar_position: 2
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import Flow, { Step } from "@site/src/components/Flow";
import NavStep from "@site/src/components/NavStep";
import Button from "@site/src/components/Button";
import Label from "@site/src/components/Label";


Apps are a way for admins to package applications and scripts in consumable packages.
These applications can then be deployed into namesspaces or virtual clusters through their templates.

Virtual clusters or namespaces combined with Apps are a great way to create repeatable, pre-packaged
development, testing, or even production environments. Once an App has been created in the vCluster Platform
instance, it can be installed into any virtual cluster or namespace -- either at time of creation, or into
existing resources. This gives administrators the capability to create fully populated
development, test, or even production, environments in a single easy to manage package.

Templates can take this combination of virtual clusters/namespaces and apps to the next
level, by creating simple, reusable, version-able templates that define a reproducible environment.When an App is included in
a template, that app will be deployed in the given resource upon creation. 

<Flow id="add-app-vcluster-template">
  <Step>
    Select the <NavStep>Templates</NavStep> field on the left menu bar.
  </Step>
  <Step>
    From the Templates sub-menu, select the Virtual Clusters option.
  </Step>
  <Step>
    Edit an existing template, or create a new virtual cluster template.
  </Step>
  <Step>
    Click the <Label>Apps</Label> configuration tab. <br></br>
    <br></br>
    <b>Note: </b>
    the apps defined in this section of the template configuration are apps to
    be deployed *in* the virtual cluster!
  </Step>
  <Step>
    From the drop down menu <Label>Add a new App ...</Label> select an App
    that you would like to be included as part of the template. You can
    select as many Apps as you would like here by simply selecting another
    App from the drop down menu. If you accidentally add one, or add one you
    do not want, click the trash icon next to the Apps name to remove it
    from the template.
  </Step>
  <Step>
    For each App you added to the template, you can configure the default
    namespace, and any App parameters supplied by the App. For helm Apps you
    can also configure the helm release-name.
  </Step>
  <Step>
    Click the <Label>Space</Label> configuration tab.
  </Step>
  <Step>
    Expand the <Label>Space Apps</Label> configuration section.
    <br></br>
    <br></br>
    <b>Note:</b> the apps defined in this section of the template configuration
    are apps to be deployed in the *space* the virtual cluster will be deployed
    in (not inside the virtual cluster itself).
  </Step>
  <Step>
    From the drop down menu <Label>Add a new App ...</Label> select an App
    that you would like to be included as part of the template. You can
    select as many Apps as you would like here by simply selecting another
    App from the drop down menu. If you accidentally add one, or add one you
    do not want, click the trash icon next to the Apps name to remove it
    from the template.
  </Step>
  <Step>
    For each App you added to the template, you can any App parameters
    supplied by the App. For helm Apps you can also configure the helm
    release-name.
  </Step>
  <Step>
    Finish configuring anything else you'd like on your template, then click
    the
    <Button>Save Changes</Button> button.
  </Step>
</Flow>
