platform_versioned_docs/version-4.12.0/use-platform/apps/use-in-templates.mdx
---
title: Use In Templates
sidebar_label: Use In Templates
sidebar_position: 2
---

import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";
import Flow, { Step } from "@site/src/components/Flow";
import NavStep from "@site/src/components/NavStep";
import Button from "@site/src/components/Button";
import Label from "@site/src/components/Label";


Apps are a way for admins to package applications and scripts in consumable packages.
These applications can then be deployed into namespaces or tenant clusters through their templates.

Tenant clusters or namespaces combined with Apps are a great way to create repeatable, pre-packaged
development, testing, or even production environments. Once an App has been created in the vCluster Platform
instance, it can be installed into any tenant cluster or namespace -- either at time of creation, or into
existing resources. This gives administrators the capability to create fully populated
development, test, or even production, environments in a single easy to manage package.

Templates can take this combination of tenant clusters/namespaces and apps to the next
level, by creating simple, reusable, version-able templates that define a reproducible environment.When an App is included in
a template, that app will be deployed in the given resource upon creation. 

<Flow id="add-app-vcluster-template">
  <Step>
    Go to <NavStep>Management > Templates</NavStep> and, if shown, click the <Label>Tenant Clusters</Label> tab.
  </Step>
  <Step>
    Edit an existing template, or create a new tenant cluster template.
  </Step>
  <Step>
    Click the <Label>Apps</Label> configuration tab. <br></br>
    <br></br>
    <b>Note: </b>
    the apps defined in this section of the template configuration are apps to
    be deployed *in* the tenant cluster!
  </Step>
  <Step>
    Select an App from the <Label>Please select an App...</Label> selector to include it in the template. You can
    add as many Apps as you like by selecting another. To remove one, click the trash icon next to the App name.
  </Step>
  <Step>
    For each App you added to the template, you can configure the default
    namespace, and any App parameters supplied by the App. For Helm Apps you
    can also configure the Helm release-name.
  </Step>
  <Step>
    Click the <Label>Space</Label> configuration tab.
  </Step>
  <Step>
    Expand the <Label>Space Apps</Label> configuration section.
    <br></br>
    <br></br>
    <b>Note:</b> the apps defined in this section of the template configuration
    are apps to be deployed in the *space* the tenant cluster will be deployed
    in (not inside the tenant cluster itself).
  </Step>
  <Step>
    Select an App from the <Label>Please select an App...</Label> selector to include it in the template. You can
    add as many Apps as you like by selecting another. To remove one, click the trash icon next to the App name.
  </Step>
  <Step>
    For each App you added to the template, you can any App parameters
    supplied by the App. For Helm Apps you can also configure the Helm
    release-name.
  </Step>
  <Step>
    Finish configuring anything else you'd like on your template, then click
    the
    <Button>Save Changes</Button> button.
  </Step>
</Flow>

## Include Stacks in a tenant cluster template

vCluster 0.37 supports Stacks through `deploy.stacks` in the tenant cluster's `vcluster.yaml`. Use a Stack when applications need dependency ordering, health gates, or output handoff.

Add the Stack in the template's **Stacks** configuration section or YAML. See [Use a Stack](./use-stacks.mdx#choose-how-to-install-a-stack) for the configuration shape. Template authors can also [create a StackTemplate](../../administer/templates/create-stack-templates.mdx) for users to select.
